fix: overlapping keyboard shortcuts kbd (#103)

--- a/src/css/core.css
+++ b/src/css/core.css
@@ -301,10 +301,7 @@ kbd {
   background: var(--lighter-color);
   color: var(--sat-ids);
   padding: 1px 5px;
-  margin: -1px;
-  text-align: center;
   font-size: 1rem;
-  border-radius: 7px;
 }
 
 pre {
