--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -345,6 +345,12 @@ input:checked + .slider:before {
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15);
 }
 
+/* Fix overlapping shortcuts icons */
+.keyboard_shortcuts li{ 
+  margin: 8px;
+}
+
+
 /* 
 ========
 + Theme Icons (No longer figma made, instead we're using a screenshot of the theme) +
